# pinocchio-rust

./: Cargo.toml  README.md  build.rs
examples/: run_examples.rs
src/: algorithm.rs  container.rs  lib.rs  main.rs  math.rs  multibody.rs  se3.rs  spatial.rs
src/algorithm/: aba.rs  crba.rs  frames.rs  jacobian.rs  joint_configuration.rs  kinematics.rs  kinematics_level.rs  reference_frame.rs  rnea.rs
src/container/: joint_force_vector.rs
src/cpp/: CMakeLists.txt
src/cpp/include/pinocchio-rust/algorithm/: aba.hpp  crba.hpp  frames.hpp  jacobian.hpp  joint_configuration.hpp  kinematics.hpp  reference_frame.hpp  rnea.hpp
src/cpp/include/pinocchio-rust/container/: joint_force_vector.hpp
src/cpp/include/pinocchio-rust/math/: eigen.hpp
src/cpp/include/pinocchio-rust/multibody/: data.hpp  model.hpp  se3.hpp
src/cpp/include/pinocchio-rust/spatial/: se3.hpp
src/cpp/src/algorithm/: aba.cpp  crba.cpp  frames.cpp  jacobian.cpp  joint_configuration.cpp  kinematics.cpp  rnea.cpp
src/cpp/src/container/: joint_force_vector.cpp
src/cpp/src/multibody/: data.cpp  model.cpp
src/cpp/src/spatial/: se3.cpp
src/math/: cxxvec.rs
src/multibody/: data.cpp  data.hpp  data.rs  model.cpp  model.hpp  model.rs  multibody.rs
src/spatial/: se3.rs
tests/: test.rs
