[package]
name = "pinocchio"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
libc = "0.2.94"
nalgebra = "0.31.0"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.25"